# go-dito

./: .bazelrc  .buildifier.json  .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  .husky.toml  404.html  BUILD  BUILD.bazel  CNAME  MODULE.bazel  README.md  analyzers.go  compose.yml  config.pkl  config.yaml  defs.bzl  dito.http  generate.go  go.mod  go.sum  index.html  main.go  mkdocs.yml  sitemap.xml  tools.go
.github/workflows/: ci.bazelrc  docs.yaml  go.yaml
assets/: AppConfig.pkl  config.schema.json
cmd/: BUILD.bazel  app.go
configuration/basics/: index.html
configuration/plain_http/: index.html
core/domain/: BUILD.bazel  request.go
core/ports/: BUILD.bazel  injectable.go  matcher.go  os.go  specs.go
core/services/: graphql_spec_parser.go  openapi_spec_parser.go  parser_registry.go  plain_rule_spec_parser.go  telemetry.go
core/services/config/: BUILD.bazel  app.go  datasize.go  datasize_test.go  domains.go  logging.go
core/services/grammar/: BUILD.bazel  grammar_test.go  params.go  params_test.go  parsing_test.go
core/services/parsing/: BUILD.bazel  graphql.go  openapi.go  plain.go  telemetry.go
core/services/routing/: BUILD.bazel  default_parser.go  gql_parser.go  graphql.go  graphql_test.go  matcher_chain.go  matchers.go  matchers_test.go  response_provider.go  response_provider_parsing.go  telemetry.go
docs/: index.md
docs/configuration/: basics.md  plain_http.md
docs/dsl/: handlers.md  intro.md  matchers.md
docs/features/: openapi.md  plain_http.md
docs/getting_started/: configuration.md
docs/overrides/: main.html
dsl/handlers/: index.html
dsl/intro/: index.html
dsl/matchers/: index.html
features/graphql/: index.html
features/openapi/: index.html
features/plain_http/: index.html
getting_started/: index.html
handlers/cli/: BUILD.bazel  serve_handler.go  version.go
handlers/http/: BUILD.bazel  domain_handler.go  oas_schema_mock_handler.go  rules_handler.go  rules_request_handler.go  telemetry.go
infrastructure/config/: global.go  logging.go
infrastructure/grammar/: grammar.go  grammar_test.go  params_test.go  parsing.go  parsing_test.go
infrastructure/httpx/: BUILD.bazel  middlewares.go
infrastructure/logging/: BUILD.bazel  context.go  errror.go
infrastructure/mapping/: BUILD.bazel  yaml_to_json.go  yaml_to_json_test.go
infrastructure/routing/: graphql.go  matcher_chain.go  matcher_parsing.go  matchers.go  matchers_test.go  response_provider.go  response_provider_parsing.go
infrastructure/telemetry/: BUILD.bazel  build_info.go  meter.go  tracer.go
internal/maps/: BUILD.bazel  iter.go
search/: search_index.json
testdata/: graphql.config.yml  petstore_v3.yaml  sample.json
testdata/queries/: simple.gql  with_args.gql
testdata/responses/: star_wars_all_films.json  star_wars_all_films_with_producers.json
testdata/scripts/: account_withdraw.js
tools/: go.mod  go.sum  workspace_status.sh
