"dito"

module(
    name = "com_github_prskr_go-dito",
)

bazel_dep(
    name = "rules_go",
    version = "0.55.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.43.0",
)
bazel_dep(
    name = "rules_oci",
    version = "2.2.6",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.1.0",
)
bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.17.1",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:analyzers")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alecthomas_kong",
    "com_github_alecthomas_participle_v2",
    "com_github_gordonklaus_ineffassign",
    "com_github_invopop_yaml",
    "com_github_kisielk_errcheck",
    "com_github_lasiar_canonicalheader",
    "com_github_ohler55_ojg",
    "com_github_pb33f_libopenapi",
    "com_github_pb33f_libopenapi_validator",
    "com_github_sivchari_containedctx",
    "com_github_stretchr_testify",
    "com_github_vektah_gqlparser_v2",
    "de_icb4dc0_code_prskr_bazel_golangci_lint_analyzers",
    "in_gopkg_yaml_v3",
    "io_opentelemetry_go_contrib_exporters_autoexport",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
)
