load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = [
        "build_info.go",
        "meter.go",
        "tracer.go",
    ],
    importpath = "github.com/prskr/go-dito/infrastructure/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
